Theano_logs/gradient/log46.log
Traceback (most recent call last):
  File "conv_net_sentence.py", line 14, in <module>
    import theano
  File "/Volumes/Transcend/opt/anaconda3/envs/theano/lib/python2.7/site-packages/theano/__init__.py", line 110, in <module>
    from theano.compile import (
  File "/Volumes/Transcend/opt/anaconda3/envs/theano/lib/python2.7/site-packages/theano/compile/__init__.py", line 26, in <module>
    from theano.compile.builders import *
  File "/Volumes/Transcend/opt/anaconda3/envs/theano/lib/python2.7/site-packages/theano/compile/builders.py", line 14, in <module>
    from theano.gradient import DisconnectedType
  File "/Volumes/Transcend/opt/anaconda3/envs/theano/lib/python2.7/site-packages/theano/gradient.py", line 1371
    rval = [access_grad_cache(elem) for elem not in wrt]
                                               ^
SyntaxError: invalid syntax
